# DataFlow-OS

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  config.docker.json  config.json  config.local.json  config.template.json  docker-compose.yml  index.html
.github/workflows/: ci.yml
certs/: cert.pem  key.pem
data/: city_ref.csv  dashboard_demo_1000.csv  dashboard_demo_p1.csv  dashboard_demo_p2.csv  employees.csv  pseudo_1000.csv  sales.csv
docs/: AIRBYTE.md  AIRFLOW_IMPORT.md  API.md  ARCHITECTURE.md  ARROW_FLIGHT.md  AUDIT.md  CLUSTER.md  CONNECTOR_ABI.md  MCP.md  POSTGRES_WIRE.md  PYTHON_STEPS.md  RBAC.md  STEP2_TLS_COMPLETION.md  TLS_SETUP.md  TRANSACTIONS.md  TRIGGERS.md  YAML_PIPELINES.md
lib/auth/: audit.c  audit.h  auth.c  auth.h  rbac.c  rbac.h
lib/cluster/: proto.c  proto.h  replicator.c  replicator.h  storage_client.c  storage_client.h
lib/connector/: connector.c  connector.h
lib/connector/plugins/airbyte/: airbyte_runner.c
lib/connector/plugins/csv/: csv_connector.c
lib/connector/plugins/json_http/: json_http_connector.c
lib/core/: arena.c  arena.h  hashmap.c  hashmap.h  json.c  json.h  log.c  log.h  sv.h  threadpool.c  threadpool.h
lib/index/: btree.c  btree.h
lib/matview/: matview.c  matview.h
lib/net/: http.c  http.h  tls.c  tls.h
lib/observ/: observ.c  observ.h
lib/pgwire/: pgwire.c  pgwire.h
lib/qengine/: qengine.c  qengine.h
lib/scheduler/: file_watcher.c  file_watcher.h  scheduler.c  scheduler.h
lib/sql_parser/: sql.c  sql.h
lib/storage/: compress.c  compress.h  storage.c  storage.h  txn.c  txn.h
lib/yaml/: yaml_loader.c  yaml_loader.h
scripts/: entrypoint.sh  gen_cert.sh  quickstart.sh
sdk/javascript/: package.json  tsconfig.json
sdk/javascript/src/: client.ts  index.ts  types.ts
sdk/javascript/tests/: client.test.ts
sdk/python/: README.md  pyproject.toml
sdk/python/dataflow_os/: __init__.py  airflow_import.py  client.py  exceptions.py  pipeline.py  table.py
sdk/python/tests/: test_airflow_import.py  test_client.py
src/flight_server/: CMakeLists.txt  colbatch_to_arrow.cc  flight_service.cc  flight_service.h  http_client.cc  http_client.h  main.cc
src/gateway/: api.c  app.h  main.c
src/mcp_server/: dispatch.c  http_client.c  main.c  mcp.h  tools.c
src/storage_node/: main.c
tests/integration/: framework.h  run_all.sh  test_airbyte.sh  test_api_query.c  test_api_tables.c  test_arrow_flight.py  test_audit.sh  test_mcp.sh  test_pgwire.sh  test_pgwire_extended.py  test_python_step.sh  test_rbac.sh  test_replication.sh  test_triggers.sh  test_txn.sh  test_yaml_pipelines.sh
tests/load/: bench_ingest.c  bench_query.c
tests/sql/: test_aggregates.c
tests/unit/: test_arena.c  test_hashmap.c  test_json.c  test_scheduler.c  test_sql.c  test_yaml.c
ui/: app.js  index.html  style.css
(+6 files in other folders)
