[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "dataflow-os"
version = "0.1.0"
description = "Python client for DataFlow OS"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
dependencies = ["requests>=2.28", "pandas>=1.5"]

[project.optional-dependencies]
dev = ["pytest>=7.0", "pytest-cov", "responses>=0.23"]

[tool.hatch.build.targets.wheel]
packages = ["dataflow_os"]
